2021-03-27  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pk-val.c (pk_val_offset): Fix the unit of offset to use
	`uint<64>` instead of `uint<32>`.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev-mem.c (ios_dev_mem_open): Memory IOS are always
	read/write.
	* poke/pk-dump.pk (Arguments): Raise E_perm if the specified IOS
	is not readable.
	* testsuite/poke.cmd/dump-10.pk: New test.
	* testsuite/poke.cmd/dump-11.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (builtin): Rule for BUILTIN_IOFLAGS.
	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_IOFLAGS): Define.
	* libpoke/pkl-lex.l: Handle __PKL_BUILTIN_IOFLAGS__.
	* libpoke/pkl-insn.def: New instruction ioflags.
	* libpoke/pvm.jitter: Likewise.
	* libpoke/pkl-rt.pk (ioflags): Define function.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Generate code for the
	ioflags builtin.
	* doc/poke.texi (ioflags): New section.
	* testsuite/poke.pkl/ioflags-1.pk: New test.
	* testsuite/poke.pkl/ioflags-2.pk: Likewise.
	* testsuite/poke.pkl/ioflags-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>
	    Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pkl-gen.pks (complex_lmap): Make sure to leave the
	l-value in a good state if the writer raises an exception.
	* testsuite/poke.map/ass-map-19.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2021-03-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_do_pass_1): PKL_AST_LOOP_STMT_HEAD is a
	chain.
	* testsuite/poke.pkl/for-13.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2021-03-25  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (PK_FILE_UFLAGS): Define.
	(PK_FILE_F_CREATE): Likewise.
	(pk_cmd_file): Maybe create file.
	(file_cmd): Register PK_FILE_UFLAGS.
	* poke/pk-ios.c (pk_open_file): Get a new argument create_p.