@@ -1,5 +1,10 @@
 2021-03-27  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>
 
+	* poke/pk-mi-json.c (pk_mi_offset_to_json): Add support for `uint`
+	as magnitude of offsets.
+
+2021-03-27  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>
+
 	* libpoke/pk-val.c (pk_val_offset): Fix the unit of offset to use
 	`uint<64>` instead of `uint<32>`.
 
